--- a/src/css/base.css
+++ b/src/css/base.css
@@ -37,31 +37,34 @@ input:focus{border:0;outline:medium}
 .grid-item a .grid-title{position: absolute;z-index: 99;top: 67%;text-align: center;width: 100%;}
 .grid-item:nth-child(3n+2){border-right: 1px solid #eee;border-left: 1px solid #eee;}
 /* 列表页 */
-.header-bar{width: 100%;height: 2.75rem;line-height: 2.75rem;border-bottom: 1px solid #e5e5e5;background-color: #f8f8f8;color: #3e3e3e;font-size: 1rem; position: relative;text-indent: 3.75rem;background-color: #f8f8f8;}
+.header-bar{width: 100%;height: 2.75rem;line-height: 2.75rem;border-bottom: 1px solid #e5e5e5;background-color: #f8f8f8;color: #3e3e3e;font-size: 1rem; position: relative;text-indent: 3.75rem;}
 .header-bar .back-btn{position: absolute;display: block;width: 3rem;height: 2.75rem;left: 0;top: 0;background: url(../images/icons-arrowleft.png) center no-repeat;background-size: 1rem 1rem;cursor: pointer;}
 .header-bar .header-right-btn{width: 2.8125rem;height: 2.75rem; position: absolute;display: block;cursor: pointer;background: url(../images/icons-share.png) center no-repeat;right: 0px;top: 0;background-size: 1.08rem .9rem;}
 .slide-bar{width: 100%;height: 12.5rem;}
+.slide-bar img{height: 12.5rem;}
 .hot-words{padding: 0 .8125rem;background-color: #fff;border-bottom: 1px solid #e5e5e5;color: #404040;font-size: .875rem;}
+#listdetail .hot-words{margin-top: .625rem;}
 .hot-words .hot-words-header{width: 100%;height: 2.5rem;line-height: 2.5rem;border-bottom: 1px solid #e5e5e5;position: relative;}
-.hot-words .hot-words-header .change-hot{width: 4.2rem;height: 2.5rem;color: #9a9a9a;font-style: normal;position: absolute;right: 0px;top: 0px;background: url(../images/icons-refresh.png) 3.2rem center no-repeat;background-size: .792rem .792rem;} 
+.hot-words .hot-words-header .change-hot{width: 4.2rem;height: 2.5rem;color: #9a9a9a;font-style: normal;position: absolute;right: 0px;top: 0px;background: url(../images/icons-refresh.png) 3.2rem center no-repeat;background-size: .792rem .792rem;cursor: pointer;} 
 .hot-words .hot-words-item{float: left;width: 50%;height: 1.155rem;margin: .5625rem 0; line-height: 1.155rem; box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;}
 .hot-words .hot-words-item a{color: #404040;}
 .hot-words .hot-words-item:nth-child(2n+2){border-left: 1px solid #e5e5e5;text-indent: .8125rem;}
-.news-list{background-color: #fff;border-top: 1px solid #e5e5e5;padding: 0 .8125rem;border-bottom: 1px solid #e5e5e5;}
+#list .news-box{margin-top: .4375rem;}
+.news-list{background-color: #fff;border-top: 1px solid #e5e5e5;padding: 0 .8125rem;/*border-bottom: 1px solid #e5e5e5;*/}
 .news-item{padding: .8125rem 0;border-bottom: 1px solid #e5e5e5;}
-.news-item:last-child{border-bottom: none;}
+/*.news-item:last-child{border-bottom: none;}*/
 .news-item a{color: #000;}
 .news-item img{float: right;margin-left: .8125rem;width: 5.92rem;height: 4.21rem;}
-.news-item .news-info{min-height: 4.21rem;position: relative;}
+.news-item .news-info{min-height: 4.21rem;position: relative;overflow: hidden;max-height: 6rem;}
 .news-item .news-info .news-title{padding-bottom: 1.6875rem;font-size: 1.0625rem;max-height: 6rem;overflow: hidden;}
-.news-item .news-info .news-context{font-size: .9375rem;color: #6e6e6e;padding-bottom: 1.6875rem;max-height: 5.4375rem;}
+.news-item .news-info .news-context{font-size: .9375rem;color: #6e6e6e;margin-bottom: 1.6875rem;max-height: 4.9375rem;overflow: hidden;}
 .news-item .news-info .news-bottom{position: absolute;color: #b8b8b8;font-size: .6875rem;bottom: 0px;left: 0px;}
 .news-item .news-info .news-bottom span{margin-right: .625rem;}
 .news-item .news-info .news-bottom .news-author{color: #42a5f5;}
 .news-item.visited{color: #757575!important;}
 .more{width: 100%;height: 3.125rem;line-height: 3.125rem;font-size: .9375rem;color: #737373;text-align: center;background-color: #fff;}
 /* 消息详情页 */
-.news-detail-box{padding: .8125rem;background-color: #fff;min-height: 500px;border-bottom: 1px solid #e5e5e5;}
+.news-detail-box{padding: .8125rem;background-color: #fff;/*min-height: 500px;*/border-bottom: 1px solid #e5e5e5;}
 .news-detail-title{width: 100%;color: #000;font-size: 1.25rem;font-weight: 200;}
 .news-detail-content{width: 100%;margin-top: .8125rem;}
 .news-detail-content img{width: 100%;margin-top: .8125rem;}
@@ -71,14 +74,20 @@ input:focus{border:0;outline:medium}
 .news-detail-bottom .news-detail-url{position: absolute;width: 4.7rem;height: 1.25rem;line-height: 1.25rem;text-align: center; background-color: #f7f7f7;color: #666;font-size: .6875rem;right: 0;bottom: 0;border-radius: .625rem;}
 .news-detail-beside{padding:0 .8125rem;border-top: 1px solid #e5e5e5;border-bottom: 1px solid #e5e5e5;background-color: #fff;margin-top: .625rem;}
 .news-detail-side{width: 100%;height: 2.8125rem;line-height: 2.8125rem;font-size: 1rem;color: #404040;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
-.news-detail-side:first-child{border-bottom: 1px solid #e5e5e5;}
+.news-detail-side:nth-child(2){border-top: 1px solid #e5e5e5;}
 .news-detail-side.visited{color: #a3a3a3;}
-.guess-like{background-color: #fff;}
-.guess-like-title{width: 100%;height: 2.5rem;line-height: 2.5rem; color: #404040;font-size: .875rem;text-indent: .8125rem;}
-.guess-like-list{padding:0 .8125rem;}
-.guess-like-list .news-list{padding:0;}
+.recommend{background-color: #fff;}
+.recommend-title{width: 100%;height: 2.5rem;line-height: 2.5rem; color: #404040;font-size: .875rem;text-indent: .8125rem;}
+.recommend-list{padding:0 .8125rem;}
+.recommend-list .news-list{padding:0;}
+.bottom-nav{padding: .8125rem;background-color: #fff;border-top: 1px solid #e5e5e5;border-bottom: 1px solid #e5e5e5;}
+.bottom-nav ul li{float: left;width: 20%;height: 3.75rem;text-align: center;line-height: 4rem;background: url(../images/icons-init-loading.png) no-repeat;}
+.footer-bar{margin: .625rem 0;padding:.83rem 0;width: 100%;background-color: #fff;border-top: 1px solid #e5e5e5;border-bottom: 1px solid #e5e5e5;}
+.footer-bar ul li{width: 50%;height: 1.146rem;line-height: 1.146rem;float: left;cursor: pointer;font-size: .9375rem;text-align: center; box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;}
+.footer-bar ul li a{color: #404040}
+.footer-bar ul li:first-child{border-right: 1px solid #e5e5e5;}
 /* 美女列表 */
-.beauty-nav{width: 100%;background-color: #212121;border-top: 1px solid #e5e5e5;border-bottom: 1px solid #e5e5e5;}
+.beauty-nav{width: 100%;background-color: #212121;border-top: 1px solid #e5e5e5;/*border-bottom: 1px solid #e5e5e5;*/}
 .beauty-nav ul li{float: left;width: 25%;height: 2.5rem;color: #fff;line-height: 2.5rem;text-align: center;font-size: .75rem;}
 .beauty-nav ul li a{color: #fff;}
 .beauty-nav ul li.on a{color: #d32b33;}
@@ -88,12 +97,18 @@ input:focus{border:0;outline:medium}
 .beauty-box ul:last-child{border-left: 1px solid #212121;}
 .beauty-box ul li{margin-bottom: 2px;}
 .beauty-box ul li img{width: 100%;}
-.middle-line{position: absolute;display: none; height: 100%;width: 2px;background-color: #212121; left: 50%;margin-left: -1px;top: 0;}
 .my-gallery-class{background-color: #212121;}
 .image-element-class{width: 50%;margin-bottom: 2px;}
-.image-element-class img{width: 100%;}
+.image-element-class img{width: 100%;cursor: pointer;}
+.beauty-img{display: none; width: 100%;height: 100%;background-color: #000;position: fixed;left: 0;top: 0;z-index: 999;overflow: hidden;}
+.beauty-img ul{background-color: #000;position: absolute;transform:translate(0px);-webkit-transform:translate(0px);}
+.beauty-img ul li{float: left;text-align: center;display: table; }
+.beauty-img ul li span{display: table-cell;vertical-align: middle;}
+.beauty-img ul li img{width: 100%;}
+.header-bar-img{width: 100%;height: 2.75rem;line-height: 2.75rem;background-color: #212121;color: #fff;font-size: 1rem; position: fixed;text-indent: 3.75rem;z-index: 99;overflow: hidden;}
+.header-bar-img .back-btn-img{position: absolute;display: block;width: 3rem;height: 2.75rem;left: 0;top: 0;background: url(../images/icons-imgarrowleft.png) center no-repeat;background-size: 1rem 1rem;cursor: pointer;}
 /* 笑话 */
-.light-nav{width: 100%;background-color: #fff;}
+.light-nav{width: 100%;background-color: #fff;border-bottom: 1px solid #e5e5e5;}
 .light-nav ul li{float: left;width: 25%;height: 2.5rem;color: #4d4d4d;line-height: 2.5rem;text-align: center;font-size: .75rem;}
 .light-nav ul li a{color: #4d4d4d;}
 .light-nav ul li.on a{color: #ff1d27;}
@@ -106,7 +121,15 @@ input:focus{border:0;outline:medium}
 .light-info .light-bottom{margin-top: .8125rem;color: #b8b8b8;font-size: .6875rem;}
 .light-item .light-info .light-bottom span{margin-right: .625rem;}
 .light-info .light-bottom .light-author{color: #42a5f5;}
-
+.light-img{width: 100%;margin: .8125rem 0;}
+/* copyright && feedback */
+.copyright-content, .feedback-content{min-height: 100%;padding: .8125rem;font-size: .875rem;color: #404040;}
+.feedback-textarea{padding: .625rem;height: 10.875rem;background-color: #fff;position: relative;border-radius: 2px;}
+.feedback-textarea textarea{width: 100%;border:0;resize:none;font-size: .9375rem;color: #404040;}
+.feedback-textarea .text-var{position: absolute;right: .625rem;bottom: .625rem;color: #d2d2d2;}
+.feedback-input{margin-top: .8125rem;padding: .625rem;background-color: #fff;border-radius: 2px;}
+.feedback-input input{width: 100%; height: 1.5625rem;line-height: 1.5625rem;border:0;color: #404040;font-size: .9375rem;}
+.submit-btn{width: 100%;border:0;height: 2.96rem;line-height: 2.96rem;margin-top: .8125rem;color: #fff;background-color: #546e7a;text-align: center; font-size: 1rem;}
 
 
 
