--- a/src/css/base.css
+++ b/src/css/base.css
@@ -39,6 +39,7 @@ input:focus{border:0;outline:medium}
 /* 列表页 */
 .header-bar{width: 100%;height: 2.75rem;line-height: 2.75rem;border-bottom: 1px solid #e5e5e5;background-color: #f8f8f8;color: #3e3e3e;font-size: 1rem; position: relative;text-indent: 3.75rem;}
 .header-bar .back-btn{position: absolute;display: block;width: 3rem;height: 2.75rem;left: 0;top: 0;background: url(../images/icons-arrowleft.png) center no-repeat;background-size: 1rem 1rem;cursor: pointer;}
+.header-bar .back-btn a{display: block;width: 3rem;height: 2.75rem;}
 .header-bar .header-right-btn{width: 2.8125rem;height: 2.75rem; position: absolute;display: block;cursor: pointer;background: url(../images/icons-share.png) center no-repeat;right: 0px;top: 0;background-size: 1.08rem .9rem;}
 .special-subject{width: 100%;height: 12.5rem;border-bottom: 1px solid #e5e5e5;}
 .special-subject img{width:100%;height: 12.5rem;}
@@ -57,7 +58,7 @@ input:focus{border:0;outline:medium}
 .news-item a:visited{color: #757575!important;}
 .news-item img{float: right;margin-left: .8125rem;width: 5.92rem;height: 4.21rem;}
 .news-item .news-info{min-height: 4.21rem;position: relative;overflow: hidden;max-height: 6rem;}
-.news-item .news-info .news-title{padding-bottom: 1.6875rem;font-size: 1.0625rem;max-height: 6rem;overflow: hidden;}
+.news-item .news-info .news-title{padding-bottom: 1.6875rem;font-size: 1.0625rem;max-height: 6rem;overflow: hidden;width: 100%;}
 .news-item .news-info .news-context{font-size: .9375rem;color: #6e6e6e;margin-bottom: 1.6875rem;max-height: 4.9375rem;overflow: hidden;}
 .news-item .news-info .news-bottom{position: absolute;color: #b8b8b8;font-size: .6875rem;bottom: 0px;left: 0px;}
 .news-item .news-info .news-bottom span{margin-right: .625rem;}
@@ -147,6 +148,9 @@ input:focus{border:0;outline:medium}
 .light-img{width: 100%;margin: .8125rem 0;}
 /* copyright && feedback */
 .copyright-content, .feedback-content{min-height: 100%;padding: .8125rem;font-size: .875rem;color: #404040;}
+.copyright-content p span{display: block;}
+.copyright-content p span.copyright-index{width: 1.875rem;float: left;}
+.copyright-content p span.copyright-context{margin-left: 1.875rem;}
 .feedback-textarea{padding: .625rem;height: 10.875rem;background-color: #fff;position: relative;border-radius: 2px;}
 .feedback-textarea textarea{width: 100%;border:0;resize:none;font-size: .9375rem;color: #404040;}
 .feedback-textarea .text-var{position: absolute;right: .625rem;bottom: .625rem;color: #d2d2d2;}
