--- a/src/css/base.css
+++ b/src/css/base.css
@@ -31,32 +31,40 @@ input:focus{border:0;outline:medium}
 
 /* 首页 */
 .grid-list{width: 100%;background-color: #fff;}
-.grid-item{float: left;width: 33.33%;height:7.375rem;color: #dadada;font-size: .79rem; text-align:center;border-bottom: 1px solid #eee;position: relative; box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;}
+.grid-item{float: left;width: 33.33%;height:7.375rem;color: #dadada;font-size: .79rem; text-align:center;border-right: 1px solid #eee;border-bottom: 1px solid #eee;position: relative; box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;}
 .grid-item a{width:100%;height: 99%;color: #757575;}
 .grid-item a img{height: 99%;}
 .grid-item a .grid-title{position: absolute;z-index: 99;top: 67%;text-align: center;width: 100%;}
-.grid-item:nth-child(3n+2){border-right: 1px solid #eee;border-left: 1px solid #eee;}
+.grid-item:nth-child(3n+3){border-right: 0;}
 /* 列表页 */
 .header-bar{width: 100%;height: 2.75rem;line-height: 2.75rem;border-bottom: 1px solid #e5e5e5;background-color: #f8f8f8;color: #3e3e3e;font-size: 1rem; position: relative;text-indent: 3.75rem;}
 .header-bar .back-btn{position: absolute;display: block;width: 3rem;height: 2.75rem;left: 0;top: 0;background: url(../images/icons-arrowleft.png) center no-repeat;background-size: 1rem 1rem;cursor: pointer;}
 .header-bar .back-btn a{display: block;width: 3rem;height: 2.75rem;}
 .header-bar .header-right-btn{width: 2.8125rem;height: 2.75rem; position: absolute;display: block;cursor: pointer;background: url(../images/icons-share.png) center no-repeat;right: 0px;top: 0;background-size: 1.08rem .9rem;}
-.special-subject{width: 100%;height: 12.5rem;border-bottom: 1px solid #e5e5e5;}
+.header-bar .header-right-btn a{display: block;width: 2.8125rem;height: 2.75rem;}
+.special-subject{width: 100%;height: 12.5rem;/*border-bottom: 1px solid #e5e5e5;*/position: relative;}
 .special-subject img{width:100%;height: 12.5rem;}
+.special-subject .subject-bottom{position: absolute;z-index: 10;width: 100%;left: 0;bottom: 0;height: 3.583rem;background: url(../images/subject_title_bg.png) repeat-x;background-size: .0625rem 3.583rem;}
+.special-subject .subject-title{position: absolute;width: 100%;left: 0;bottom: 0;}
+.special-subject .subject-title i{display: block;width: 1.875rem;height: 1rem;line-height: 1rem;float: left;background-color: #d50000;font-size: .67rem;text-align: center;color: #fff;font-style: normal;margin-left: .8125rem;margin-top: .4375rem;}
+.special-subject .subject-title span{display:block;width: 80%;float: left;font-size: 1.0625rem;color: #fff;line-height: 2rem;margin-left: .625rem;text-overflow: ellipsis;word-break: break-all;overflow: hidden;white-space: nowrap;}
 .hot-words{padding: 0 .8125rem;background-color: #fff;border-bottom: 1px solid #e5e5e5;color: #404040;font-size: .875rem;}
 #listdetail .hot-words{margin-top: .625rem;}
 .hot-words .hot-words-header{width: 100%;height: 2.5rem;line-height: 2.5rem;border-bottom: 1px solid #e5e5e5;position: relative;}
 .hot-words .hot-words-header .change-hot{width: 4.2rem;height: 2.5rem;color: #9a9a9a;font-style: normal;position: absolute;right: 0px;top: 0px;background: url(../images/icons-refresh.png) 3.2rem center no-repeat;background-size: .792rem .792rem;cursor: pointer;} 
+.hot-words .hot-words-list{padding: .5rem 0;}
 .hot-words .hot-words-item{float: left;width: 50%;height: 1.155rem;margin: .5625rem 0; line-height: 1.155rem; box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;}
 .hot-words .hot-words-item a{color: #404040;}
 .hot-words .hot-words-item:nth-child(2n+2){border-left: 1px solid #e5e5e5;text-indent: .8125rem;}
 #list .news-box{margin-top: .4375rem;}
+#list .news-box.subject{margin-top: 0;}
 .news-list{background-color: #fff;border-top: 1px solid #e5e5e5;padding: 0 .8125rem;/*border-bottom: 1px solid #e5e5e5;*/}
 .news-item{padding: .8125rem 0;border-bottom: 1px solid #e5e5e5;}
 /*.news-item:last-child{border-bottom: none;}*/
 .news-item a{color: #000;}
 .news-item a:visited{color: #757575!important;}
-.news-item img{float: right;margin-left: .8125rem;width: 5.92rem;height: 4.21rem;}
+.news-item .news-item-img{float: right;margin-left: .8125rem;width: 5.92rem;height: 4.21rem;overflow: hidden;}
+.news-item .news-item-img img{width: 100%;}
 .news-item .news-info{min-height: 4.21rem;position: relative;overflow: hidden;max-height: 6rem;}
 .news-item .news-info .news-title{padding-bottom: 1.6875rem;font-size: 1.0625rem;max-height: 6rem;overflow: hidden;width: 100%;}
 .news-item .news-info .news-context{font-size: .9375rem;color: #6e6e6e;margin-bottom: 1.6875rem;max-height: 4.9375rem;overflow: hidden;}
@@ -70,8 +78,8 @@ input:focus{border:0;outline:medium}
 .news-detail-box{padding: .8125rem;background-color: #fff;/*min-height: 500px;*/border-bottom: 1px solid #e5e5e5;}
 .news-detail-title{width: 100%;color: #000;font-size: 1.25rem;font-weight: 200;}
 .news-detail-content{width: 100%;margin-top: .8125rem;}
-.news-detail-content img{width: 100%;margin-top: .8125rem;}
-.news-detail-content p{font-size: 1.0625rem;color: #676767;line-height: 1.6rem;}
+.news-detail-content img{width: 100%;margin-top: .8125rem;margin-bottom: .8125rem;}
+.news-detail-content p{font-size: 1.0625rem;color: #212121;line-height: 1.6rem;}
 .news-detail-bottom{margin-top: 1.5625rem;position: relative;}
 .news-detail-bottom .news-detail-time{font-size: .6875rem;color: #b8b8b8;}
 .news-detail-bottom .news-detail-url{position: absolute;width: 4.7rem;height: 1.25rem;line-height: 1.25rem;text-align: center; background-color: #f7f7f7;color: #666;font-size: .6875rem;right: 0;bottom: 0;border-radius: .625rem;}
@@ -131,17 +139,20 @@ input:focus{border:0;outline:medium}
 .beauty-img ul li img{width: 100%;}
 .header-bar-img{width: 100%;height: 2.75rem;line-height: 2.75rem;background-color: #212121;color: #fff;font-size: 1rem; position: fixed;text-indent: 3.75rem;z-index: 99;overflow: hidden;}
 .header-bar-img .back-btn-img{position: absolute;display: block;width: 3rem;height: 2.75rem;left: 0;top: 0;background: url(../images/icons-imgarrowleft.png) center no-repeat;background-size: 1rem 1rem;cursor: pointer;}
+.beauty-more{width: 100%;height: 3.125rem;line-height: 3.125rem;font-size: .9375rem;color: #878787;text-align: center;background-color: #212121;position: fixed;bottom: 0;left: 0;z-index: 99;}
+.beauty-init{width: 100%;height: 100%;position: absolute;background-color: #fff;left: 0;top: 0;z-index: 999;}
 /* 笑话 */
 .light-nav{width: 100%;background-color: #fff;border-bottom: 1px solid #e5e5e5;}
-.light-nav ul li{float: left;width: 25%;height: 2.5rem;color: #4d4d4d;line-height: 2.5rem;text-align: center;font-size: .75rem;}
+.light-nav ul li{float: left;width: 25%;height: 2.5rem;color: #4d4d4d;line-height: 2.5rem;text-align: center;font-size: .8125rem;}
 .light-nav ul li a{color: #4d4d4d;}
 .light-nav ul li.on a{color: #ff1d27;}
 .light-list{background-color: #fff;border-bottom: 1px solid #e5e5e5;}
 .light-item{padding: .8125rem;border-bottom: 1px solid #e5e5e5;}
+.light-list .light-item a:visited .light-context{color: #757575!important;}
 .light-item:last-child{border-bottom: none;}
 .light-info .light-title{color: #607d8b;font-size: .8125rem;margin-bottom: .4375rem;}
 .light-info .light-context{color: #404040;font-size: .9375rem;line-height: 1.5rem;/*max-height: 6rem;overflow: hidden;*/}
-.light-info img{width: 9.625rem;margin-top: .5rem;}
+.light-info img{width: 100%;margin-top: .5rem;}
 .light-info .light-bottom{margin-top: .8125rem;color: #b8b8b8;font-size: .6875rem;}
 .light-item .light-info .light-bottom span{margin-right: .625rem;}
 .light-info .light-bottom .light-author{color: #42a5f5;}
