--- a/src/css/base.css
+++ b/src/css/base.css
@@ -140,7 +140,7 @@ input:focus{border:0;outline:medium}
 .header-bar-img{width: 100%;height: 2.75rem;line-height: 2.75rem;background-color: #212121;color: #fff;font-size: 1rem; position: fixed;top:0;left:0;text-indent: 3.75rem;z-index: 99;overflow: hidden;}
 .header-bar-img .back-btn-img{position: absolute;display: block;width: 3rem;height: 2.75rem;left: 0;top: 0;background: url(../images/icons-imgarrowleft.png) center no-repeat;background-size: 1rem 1rem;cursor: pointer;}
 .beauty-more{width: 100%;height: 3.125rem;line-height: 3.125rem;font-size: .9375rem;color: #878787;text-align: center;background-color: #212121;position: fixed;bottom: 0;left: 0;z-index: 99;}
-.beauty-init{width: 100%;height: 100%;position: absolute;background-color: #fff;left: 0;top: 0;z-index: 999;}
+.beauty-init{width: 100%;height: 100%;position: absolute;background-color: #fff;left: 0;top: 5.25rem;z-index: 999;}
 /* 笑话 */
 .light-nav{width: 100%;background-color: #fff;border-bottom: 1px solid #e5e5e5;}
 .light-nav ul li{float: left;width: 25%;height: 2.5rem;color: #4d4d4d;line-height: 2.5rem;text-align: center;font-size: .8125rem;}
