--- a/src/css/base.css
+++ b/src/css/base.css
@@ -38,6 +38,7 @@ input:focus{border:0;outline:medium}
 .grid-item:nth-child(3n+3){border-right: 0;}
 .loading-bg{position: fixed;top: 0;left: 0;width: 100%;height: 100%;background-color: #fff;z-index:9998;}
 .loading-icon{position: fixed;width: 3.167rem;height: 2.125rem;left: 50%;top: 50%;margin-left: -1.5835rem;margin-top: -1.0625rem;background: url(../images/loading.gif) center no-repeat ;background-size: 100% 100%;z-index: 9999;}
+.loading-bar{width: 100%;height: 2px;background: url(../images/loading-bar.gif) center no-repeat ;background-size: 100% 100%;display: none;position: fixed;top: 0;left: 0;z-index: 999;}
 /* 列表页 */
 .header-bar{width: 100%;height: 2.75rem;line-height: 2.75rem;border-bottom: 1px solid #e5e5e5;background-color: #f8f8f8;color: #3e3e3e;font-size: 1rem; position: relative;text-indent: 3.75rem;}
 .header-bar .back-btn{position: absolute;display: block;width: 3rem;height: 2.75rem;left: 0;top: 0;background: url(../images/icons-arrowleft.png) center no-repeat;background-size: 1rem 1rem;cursor: pointer;}
@@ -59,7 +60,7 @@ input:focus{border:0;outline:medium}
 .hot-words .hot-words-item a{color: #404040;}
 .hot-words .hot-words-item:nth-child(2n+2){border-left: 1px solid #e5e5e5;text-indent: .8125rem;}
 #list .news-box{margin-top: .4375rem;}
-#list .news-box.subject{margin-top: 0;}
+#list .news-box.subject{margin-top: -1px;}
 .news-list{background-color: #fff;border-top: 1px solid #e5e5e5;padding: 0 .8125rem;/*border-bottom: 1px solid #e5e5e5;*/}
 .news-item{padding: .8125rem 0;border-bottom: 1px solid #e5e5e5;}
 /*.news-item:last-child{border-bottom: none;}*/
@@ -69,7 +70,7 @@ input:focus{border:0;outline:medium}
 .news-item .news-item-img img{width: 100%;}
 .news-item .news-info{min-height: 4.21rem;position: relative;overflow: hidden;max-height: 6rem;}
 .news-item .news-info .news-title{padding-bottom: 1.6875rem;font-size: 1.0625rem;max-height: 6rem;overflow: hidden;width: 100%;}
-.news-item .news-info .news-context{font-size: .9375rem;color: #000;margin-bottom: 1.6875rem;max-height: 4.9375rem;overflow: hidden;}
+.news-item .news-info .news-context{font-size: .9375rem;/*color: #000;*/margin-bottom: 1.6875rem;max-height: 4.9375rem;overflow: hidden;}
 .news-item .news-info .news-bottom{position: absolute;color: #b8b8b8;font-size: .6875rem;bottom: 0px;left: 0px;}
 .news-item .news-info .news-bottom span{margin-right: .625rem;}
 .news-item .news-info .news-bottom .news-author{color: #42a5f5;}
